tests/errors/static_private_member.dang
# Test: a private (let) static is not reachable as Type.member from outside.
type Money {
  cents: Int! = 0

  self {
    let perDollar = 100
  }
}

perDollar: Int! = Money.perDollar
